# spectrail

./: .env.example  .gitignore  LICENSE  README.md  constraints-ci.txt  constraints-pdf-fixtures.txt  pyproject.toml
.github/: commit-convention.md
.github/workflows/: ci.yml  update-visual-baselines.yml
docs/: p0_demo.md  p1_api.md  p1b_review_ui.md  p2_docx_pdf_best_effort.md  p3_llm_extraction_adapter.md  p4_evaluation_chunking.md  p5_evidence_review.md  pdf_corpus_v1.md  sample_srs.docx  sample_srs.md
docs/releases/: v0.1.0.md
eval/pdf_corpus_v1/: manifest.json
fixtures/: mock_reqir_response.json  mock_table_reqir_response.json
fixtures/recorded/: sample_srs_live_deepseek_response.json  sample_srs_reqir_response.json  sample_srs_reqir_response_full.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  visual.html  vite.config.ts
frontend/scripts/: update-visual-baselines.mjs
frontend/src/: App.test.tsx  (+5 more)
scripts/: update_pdf_continuation_visual_fixture.py  update_pdf_merged_table_visual_fixture.py  update_pdf_table_visual_fixture.py
spectrail/: __init__.py  cli.py  migrations.py  task_transactions.py
tests/: conftest.py  test_api_documentation_contract.py  test_api_exports.py  test_api_model_modes.py  test_api_review.py  test_api_sources.py  test_api_tasks.py  test_candidate_aggregator.py  test_cli_evaluate.py  test_cli_validate.py  test_docx_parser.py  test_evaluation_locator_metrics.py  test_evaluation_matcher.py  test_evidence_fingerprint.py  test_evidence_index_builder.py  test_evidence_models.py  test_fixture_coverage.py  test_fixture_tooling.py  test_llm_factory.py  test_llm_response_parser.py  test_locator_derivation.py  test_markdown_parser.py  test_mock_pipeline.py  test_openai_compatible_model.py  test_parser_registry.py  test_pdf_corpus.py  test_pdf_parser.py  test_pipeline_chunked.py  test_pipeline_document_formats.py  test_pipeline_model_modes.py  test_pipeline_runner.py  test_prompt_builder.py  test_quote_matcher.py  test_recorded_model.py  test_reqir_extractor.py  test_reqir_extractor_batch.py  test_reqir_package.py  test_request_fingerprints.py  test_review_cli.py  test_review_state.py  (+6 more)
(+125 files in other folders)
