[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrail"
version = "0.1.0"
description = "Markdown-first ReqIR extraction and review MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["spectrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
