[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrail"
version = "0.1.0"
description = "Markdown-first ReqIR extraction and review MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "openpyxl>=3.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["spectrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
