[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrail"
version = "0.1.0"
description = "Local-first source-grounded ReqIR extraction, review, and JSON/Excel export"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["requirements", "traceability", "ReqIR", "EARS", "human-in-the-loop"]
dependencies = [
  "pydantic>=2.0",
  "openpyxl>=3.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "PyMuPDF>=1.28,<1.29",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/HugoWang232608/spectrail"
Issues = "https://github.com/HugoWang232608/spectrail/issues"

[tool.setuptools.packages.find]
include = ["spectrail*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
